--- a/package.json
+++ b/package.json
@@ -70,10 +70,12 @@
     "react-dropzone-component": "^3.2.0",
     "react-html-parser": "^2.0.2",
     "react-modal": "^3.11.1",
+    "react-pdf": "^4.1.0",
     "react-redux": "5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
     "react-truncate": "^2.4.0",
+    "reactjs-pdf-reader": "^1.0.9",
     "redux": "^3.7.2",
     "sass-loader": "^7.1.0",
     "striptags": "^3.1.1",
